--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/ReviewPromptSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/ReviewPromptSubPage.xaml
@@ -25,7 +25,9 @@
     </UserControl.Resources>
 
     <!--Content-->
-    <host:SubPageFrame Title="ENJOYING THE APP?">
+    <host:SubPageFrame
+        x:Uid="ReviewPrompt/Frame"
+        Title="ENJOYING THE APP?">
         <Grid Padding="12" RowSpacing="12">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -34,6 +36,7 @@
 
             <!--Text-->
             <controls:MarkdownTextBlock
+                x:Uid="ReviewPrompt/Body"
                 Background="Transparent"
                 Text="Thank you for downloading **Brainf\*ck#**!&#x0a;&#x0a;Are you enjoying it so far?"
                 IsTextScaleFactorEnabled="False"/>
@@ -53,6 +56,7 @@
                     OffsetY="4"
                     HorizontalContentAlignment="Stretch">
                     <Button
+                        x:Uid="ReviewPrompt/Review"
                         Background="#FF1A1B1C"
                         Style="{StaticResource ExpandedSquareButtonRevealStyle}"
                         ToolTipService.ToolTip="Leave a review in the Store"
@@ -71,6 +75,7 @@
                     OffsetY="4"
                     HorizontalContentAlignment="Stretch">
                     <Button
+                        x:Uid="ReviewPrompt/Contact"
                         Background="#FF1A1B1C"
                         Style="{StaticResource ExpandedSquareButtonRevealStyle}"
                         ToolTipService.ToolTip="Contact the developer"
