Added enum scoped localization converters

--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
@@ -257,7 +257,7 @@
                             <GroupStyle.HeaderTemplate>
                                 <DataTemplate x:DataType="collections:IReadOnlyObservableGroup">
                                     <jumpList:SemanticZoomZoomedInViewHeaderTemplate
-                                        Title="{x:Bind convertersSubPages:SettingsSectionConverters.ConvertSectionName((enums:SettingsSection)Key)}"
+                                        Title="{x:Bind converters:EnumConverter.Convert((enums:SettingsSection)Key)}"
                                         Margin="0,-8,0,0"/>
                                 </DataTemplate>
                             </GroupStyle.HeaderTemplate>
@@ -287,7 +287,7 @@
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="ICollectionViewGroup">
                             <jumpList:SemanticZoomZoomedOutViewHeaderTemplate
-                                Title="{x:Bind convertersSubPages:SettingsSectionConverters.ConvertSectionName((enums:SettingsSection)Group.(collections:IReadOnlyObservableGroup.Key))}"
+                                Title="{x:Bind converters:EnumConverter.Convert((enums:SettingsSection)Group.(collections:IReadOnlyObservableGroup.Key))}"
                                 DescriptionText="{x:Bind convertersSubPages:SettingsSectionConverters.ConvertSectionDescription((enums:SettingsSection)Group.(collections:IReadOnlyObservableGroup.Key))}"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
