--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/UserGuide/UserGuideSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/UserGuide/UserGuideSubPage.xaml
@@ -7,7 +7,7 @@
     xmlns:host="using:Brainf_ckSharp.Uwp.Controls.SubPages.Host"
     xmlns:sections="using:Brainf_ckSharp.Uwp.Controls.SubPages.Shell.UserGuide.Sections"
     xmlns:templateSelectors="using:Brainf_ckSharp.Uwp.TemplateSelectors"
-    xmlns:convertersSubPages="using:Brainf_ckSharp.Uwp.Converters.SubPages"
+    xmlns:converters="using:Brainf_ckSharp.Uwp.Converters"
     xmlns:jumpList="using:Brainf_ckSharp.Uwp.Controls.DataTemplates.JumpList"
     xmlns:enums="using:Brainf_ckSharp.Shared.Enums"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
@@ -66,7 +66,7 @@
                         <GroupStyle HeaderContainerStyle="{StaticResource ExpandedListViewHeaderItemStyle}">
                             <GroupStyle.HeaderTemplate>
                                 <DataTemplate x:DataType="collections:IReadOnlyObservableGroup">
-                                    <jumpList:SemanticZoomZoomedInViewHeaderTemplate Title="{x:Bind convertersSubPages:UserGuideSectionConverter.ConvertTitle((enums:UserGuideSection)Key)}"/>
+                                    <jumpList:SemanticZoomZoomedInViewHeaderTemplate Title="{x:Bind converters:EnumConverter.Convert((enums:UserGuideSection)Key, 'Title')}"/>
                                 </DataTemplate>
                             </GroupStyle.HeaderTemplate>
                         </GroupStyle>
@@ -89,8 +89,8 @@
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="ICollectionViewGroup">
                             <jumpList:SemanticZoomZoomedOutViewHeaderTemplate
-                                Title="{x:Bind convertersSubPages:UserGuideSectionConverter.ConvertTitle((enums:UserGuideSection)Group.(collections:IReadOnlyObservableGroup.Key))}"
-                                DescriptionText="{x:Bind convertersSubPages:UserGuideSectionConverter.ConvertDescription((enums:UserGuideSection)Group.(collections:IReadOnlyObservableGroup.Key))}"/>
+                                Title="{x:Bind converters:EnumConverter.Convert((enums:UserGuideSection)Group.(collections:IReadOnlyObservableGroup.Key), 'Title')}"
+                                DescriptionText="{x:Bind converters:EnumConverter.Convert((enums:UserGuideSection)Group.(collections:IReadOnlyObservableGroup.Key), 'Description')}"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
